[tool.poetry]
name = "Kucing Kacang"
version = "0.1.0"
description = "Spam filter for kuroneko"
authors = ["'Jeong Arm' <'kjwonmail@gmail.com'>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.23.0"
snowflake-id = "^0.0.2"
fastapi = "^0.109.1"
uvicorn = "^0.18.3"
cssselect = "^1.2.0"
lxml = "^5.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
flake8-import-order = "^0.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
